# Agentic--Apprenticeship-SuperAgregator-AASA

./: LICENSE  README.md  launch.bat  launch.ps1
alternance-search/: .env.example  .gitignore  Makefile  README.md  launch.sh  launch_server.py  make.bat  pyproject.toml
alternance-search/agents/: alternance-search-optimizer.agent.md
alternance-search/auth/: README.md
alternance-search/config/: __init__.py  settings.py
alternance-search/data/: llm_config.example.json  llm_config.json  profile_candidat.example.md  semantic_criteria.json
alternance-search/exports/: .gitkeep
alternance-search/scripts/: __init__.py  db.py  index.py  pipeline.py  save_auth.py  save_auth_jobteaser.py  scrape.py  search.py  setup.py  test_indeed.py
alternance-search/src/: __init__.py
alternance-search/src/embeddings/: __init__.py  embedder.py
alternance-search/src/export/: __init__.py  excel.py
alternance-search/src/normalizer/: __init__.py  pipeline.py
alternance-search/src/scoring/: __init__.py  click_tracker.py  llm_scorer.py  profile_builder.py  semantic_criteria.py  semantic_pipeline.py
alternance-search/src/scraper/: __init__.py  base.py  browser.py  criteria.py  exceptions.py  logging.py  manager.py  page_fetcher.py
alternance-search/src/scraper/plugins/: __init__.py  hellowork.py  indeed.py  iquesta.py  jeunes_d_avenirs.py  wttj.py  (+3 more)
alternance-search/src/search/: __init__.py  indexer.py  retriever.py
alternance-search/src/store/: __init__.py  database.py  favorites.py  models.py  repository.py
alternance-search/src/webapp/: __init__.py  jobs.py  main.py
(+17 files in other folders)
